--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
         "plugin:react/recommended",
         "airbnb",
         "airbnb/hooks",
-        "prettier"
+        "prettier",
+        "prettier/react"
     ],
     "parserOptions": {
         "ecmaFeatures": {
