--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
@@ -41,6 +38,7 @@
         "eslint-plugin-jsx-a11y": "^6.3.0",
         "eslint-plugin-react": "^7.20.5",
         "eslint-plugin-react-hooks": "4.0.0",
-        "prettier": "^2.0.5"
+        "prettier": "^2.0.5",
+        "typescript": "^3.9.7"
     }
 }
