--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "dependencies": {
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-is": "^16.13.1",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.1"
+        "react-scripts": "3.4.1",
+        "styled-components": "^5.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -32,7 +34,7 @@
         ]
     },
     "devDependencies": {
-        "eslint": "^7.6.0",
+        "eslint": "^6.0.0",
         "eslint-config-airbnb": "18.2.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-import": "^2.21.2",
