--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "eslint": "^6.0.0",
         "eslint-config-airbnb": "18.2.0",
         "eslint-config-prettier": "^6.11.0",
+        "eslint-import-resolver-node": "^0.3.4",
         "eslint-plugin-import": "^2.21.2",
         "eslint-plugin-jsx-a11y": "^6.3.0",
         "eslint-plugin-react": "^7.20.5",
