--- a/package.json
+++ b/package.json
@@ -1,48 +1,67 @@
 {
-    "name": "hedwig-square-oauth",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-is": "^16.13.1",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.1",
-        "styled-components": "^5.1.1"
+  "name": "hedwig-square-oauth",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "format": "standard --fix "
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es2020": true
     },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "lint": "eslint --fix .",
-        "format": "prettier --write ."
+    "extends": [
+      "react-app",
+      "plugin:react/recommended",
+      "airbnb",
+      "airbnb/hooks"
+    ],
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 11,
+      "sourceType": "module"
     },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "eslint": "^6.0.0",
-        "eslint-config-airbnb": "18.2.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-import-resolver-node": "^0.3.4",
-        "eslint-plugin-import": "^2.21.2",
-        "eslint-plugin-jsx-a11y": "^6.3.0",
-        "eslint-plugin-react": "^7.20.5",
-        "eslint-plugin-react-hooks": "4.0.0",
-        "prettier": "^2.0.5",
-        "typescript": "^3.9.7"
-    }
+    "plugins": [
+      "react"
+    ],
+    "rules": {}
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.0.0",
+    "eslint-config-airbnb": "18.2.0",
+    "eslint-import-resolver-node": "^0.3.4",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "4.0.0",
+    "standard": "^14.3.4",
+    "typescript": "^3.9.7"
+  }
 }
