--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier-standard --lint"
+    "lint": "prettier-standard --lint"
   },
   "browserslist": {
     "production": [
