--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.2.1"
   },
   "scripts": {
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "prettier-standard --lint"
+    "lint": "standard --fix --verbose | snazzy"
   },
   "browserslist": {
     "production": [
@@ -31,7 +31,7 @@
     ]
   },
   "devDependencies": {
-    "prettier-standard": "^16.4.1",
-    "typescript": "^4.1.3"
+    "snazzy": "^9.0.0",
+    "standard": "^16.0.3"
   }
 }
